# XProtoSphere

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
blender_template/: protosphere-template.blend
configuration/: root_directory.h.in
scripts/: compile_vs2022_release.bat  run_example.bat  run_example_cube.bat
xprotosphere/: CMakeLists.txt  format.bat
xprotosphere/include/: kiri_cuda_utils.h  kiri_pch.h  kiri_struct.h
xprotosphere/include/abc/: alembic-manager-base.h  particles-alembic-manager.h
xprotosphere/include/cuda/: cuda_helper.h
xprotosphere/include/geo/: geo_grid.h  geo_helper.h  geo_math_helper.h  geo_object.h  geo_particle_generator.h
xprotosphere/include/geo/inl/: geo_grid-inl.h  geo_object-inl.h  geo_particle_generator-inl.h
xprotosphere/include/model/: mesh_loader.h
xprotosphere/src/: kiri_cuda_utils.cpp  main.cpp
xprotosphere/src/model/: mesh_loader.cpp
xprotosphere_cuda/: CMakeLists.txt
xprotosphere_cuda/include/: kiri_log.h
xprotosphere_cuda/include/kiri_pbs_cuda/: cuda_common.cuh  kiri_pbs_pch.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/cuda_helper/: helper_math.h  helper_string.h
xprotosphere_cuda/include/kiri_pbs_cuda/data/: cuda_array.cuh  cuda_boundary_params.h  cuda_sampler_params.h
xprotosphere_cuda/include/kiri_pbs_cuda/kernel/: cuda_sph_kernel.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/math/: cuda_math_colormap.cuh  cuda_math_utils.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/particle/: cuda_particles.cuh  cuda_protosphere_particles.cuh  cuda_sph_bn_particles.cuh  cuda_sph_bn_particles_gpu.cuh  cuda_sph_particles.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/sampler/: cuda_sampler_struct.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/sdf/: cuda_basic_sdf.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/searcher/: cuda_neighbor_searcher.cuh  cuda_neighbor_searcher_gpu.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/solver/: cuda_base_solver.cuh  cuda_solver_common_gpu.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/solver/sampler/: cuda_dem_ms_sampler.cuh  cuda_dem_ms_sampler_gpu.cuh  cuda_protosphere_sampler.cuh  cuda_protosphere_sampler_gpu.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/solver/sph/: cuda_sph_solver_common_gpu.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/system/: cuda_base_system.cuh  cuda_base_system_gpu.cuh  cuda_protosphere_system.cuh
xprotosphere_cuda/include/kiri_pbs_cuda/thrust_helper/: helper_thrust.cuh
xprotosphere_cuda/src/: kiri_log.cpp
xprotosphere_cuda/src/kiri_pbs_cuda/data/: cuda_sampler_params.cpp
xprotosphere_cuda/src/kiri_pbs_cuda/particle/: cuda_sph_bn_particles.cu  cuda_sph_particles.cu
xprotosphere_cuda/src/kiri_pbs_cuda/searcher/: cuda_neighbor_searcher.cu
xprotosphere_cuda/src/kiri_pbs_cuda/solver/sampler/: cuda_dem_ms_sampler.cpp  cuda_dem_ms_sampler.cu  cuda_protosphere_sampler.cpp  cuda_protosphere_sampler.cu
xprotosphere_cuda/src/kiri_pbs_cuda/system/: cuda_base_system.cu  cuda_protosphere_system.cpp  cuda_protosphere_system.cu
